test/official_tests/function/body_must_be_block.lox
// error: {"line":3,"message":"Function body must start with '{'","type":"ParseError"}
// [c line 4] Error at end: Expect '}' after block.
fun f() 123;
